Header section completed

--- a/index.html
+++ b/index.html
@@ -109,23 +109,29 @@
     </nav>
 
     <!-- banner section -->
-    <section class=" flex items-center justify-center flex-col text-center	">
-      <div class="w-[32rem] mx-auto">
+    <section class=" flex items-center justify-center flex-col text-center">
+      <div class="w-[16rem] lg:w-[32rem] mx-auto">
         <img src="./images/banner.png" alt="">
       </div>
       <div>
-        <h2 class="w-[67rem] text-6xl font-bold mb-4 mx-auto">A barn house of this design has a <br> striking appearance
+        <h2 class="w-[21rem] lg:w-[67rem] text-4xl lg:text-6xl font-bold mb-4 mx-auto mb-7">A barn house of this design
+          has a <br>
+          striking
+          appearance
         </h2>
-        <p class="w-[60rem] text-2xl text-gray-400 mx-auto">The barn house captivates with its blend of rustic charm and
+        <p class=" w-[21rem] lg:w-[60rem] text-xl lg:text-2xl text-gray-400 mx-auto mb-7">The barn house captivates with
+          its blend
+          of rustic
+          charm and
           modern
           sophistication, featuring weathered wood,
           sleek
           metal accents, and large windows that flood the space with natural light.
         </p>
-        <div class="bg-lime-500 px-4 py-2 rounded-full hidden lg:flex w-[12rem] mx-auto">
-          <button class="font-bold text-center">Book Consult <i
-              class="fa-solid fa-arrow-right fa-rotate-by px-1.5 py-1.5 rounded-full bg-black"
-              style="color: #ffffff; --fa-rotate-angle: -45deg;""></i></button>
+        <div class="bg-lime-200 px-4 py-2 rounded-full lg:flex w-[20rem] lg:w-[12rem] mx-auto border-lime-300 border-2">
+          <button class="font-bold flex-auto">View Details <i
+              class="fa-solid fa-arrow-right fa-rotate-by px-1 py-1 rounded-full bg-lime-500"
+              style="color: #0a0a0a; --fa-rotate-angle: -45deg;""></i></button>
                     </div>
       </div>
 
